Turkish collections API, a Simulation sample curriculum, and two cross-platform fixes
Builds on the keyword-localization branch. Four separable pieces:

1. macOS full-screen fix (action/actions.scala). setFullScreenWindow does not
   make the window visible on macOS, so full-screen mode opened on a window that
   was never shown and the screen stayed black; Esc still worked, which is why it
   looked like a paint bug. One setVisible(true) after entering full-screen mode
   fixes it; the comment records the measured pixel values, including that the
   call order matters. No-op on Windows and Linux, so no platform check.

2. Build on modern JDKs (build.sbt). The CMS flags target Java 8 and Java 14
   removed them, so a JVM given them refuses to start at all and both `sbt run`
   and `sbt test` fail on a current JDK. They are now added only where they are
   understood, and Java 9+ gets the --add-opens the cglib/jmock tests need.

3. Samples > Simulation: twelve samples in English and Turkish, a deliberate
   sequence where each step adds one idea to the previous one - animate loop,
   bouncing, a table, gravity, friction, then n-body gravitation up to a solar
   system, and finally ball-to-ball collisions. The roadmap is at the top of
   bounce-start.kojo. Bundle keys added for both languages.

4. Turkish collections API (i18n/tr). Turkish wrappers for the Scala collections
   - sequences, maps, sets, stack, queue, range, Option and Either, iterators -
   with Turkish help text for 183 methods, plus the completion-provider hook that
   makes those wrappers count as known owners in the Turkish locale.

All of the above compiles on the stock Scala compiler: the Turkish API layer is
written in ordinary Scala and only the help *examples* use Turkish keywords.
The two tests that compile those examples now probe for keyword support and skip
when it is absent, instead of failing on a stock build. Full suite: 207 tests,
all passing, on stock Scala 2.13.18.

Co-Authored-By: Cl