@@ -4,10 +4,22 @@ version := "2.9"
 scalaVersion := scalaVer
 run / fork := true
 scalacOptions := Seq("-feature", "-deprecation")
-run / javaOptions ++= Seq("-Xmx1024m", "-Xss1m", "-XX:+UseConcMarkSweepGC", "-XX:+CMSClassUnloadingEnabled")
+// The CMS flags target Java 8. Java 14 removed them, and a JVM given them there
+// refuses to start at all ("Unrecognized VM option"), so `sbt run` and `sbt test`
+// both fail on a modern JDK. Add them only on a JVM that still understands them.
+lazy val cmsFlags = {
+  val major = System.getProperty("java.specification.version").split('.').last.toInt
+  if (major < 14) Seq("-XX:+UseConcMarkSweepGC", "-XX:+CMSClassUnloadingEnabled") else Seq.empty[String]
+}
+run / javaOptions ++= Seq("-Xmx1024m", "-Xss1m") ++ cmsFlags
 
 Test / fork := true
-Test / javaOptions ++= Seq("-Xmx1024m", "-Xss1m", "-XX:+UseConcMarkSweepGC", "-XX:+CMSClassUnloadingEnabled")
+// Java 9+ needs these opens for the cglib/jmock based tests; harmless on Java 8.
+lazy val testAddOpens =
+  if (System.getProperty("java.specification.version").split('.').last.toInt >= 9)
+    Seq("--add-opens", "java.base/java.lang=ALL-UNNAMED", "--add-opens", "java.base/java.util=ALL-UNNAMED")
+  else Seq.empty[String]
+Test / javaOptions ++= Seq("-Xmx1024m", "-Xss1m") ++ cmsFlags ++ testAddOpens
 testOptions += Tests.Argument(TestFrameworks.JUnit, "-v", "-s")
 
 autoScalaLibrary := false
